# LLMao

./: .gitignore  README.MD  pyproject.toml
Agent/basics/: request.py  retrieval.py  structured.py  tools.py
Agent/workflow/: orchestrator.py  parallization_api_test.py  routing.py
Finetune/unsloth_qwen/: qwen2_0.5B_test.py  unsloth_qwen_lora.py
RAG/: llamaindex_quickstart.py
Resource/ml2025_lhy/hw1/: mlhw1_ipynb.ipynb  result_v2_rag.txt
Resource/ml2025_lhy/hw2/: ml2025spring-hw2.ipynb  readme.txt
basics/: request.py  retrieval.py  structured.py  test.py  tools.py
data/: AI对会计行业的冲击_sections_content.txt  kb.json
finetune/: unsloth_qwen_lora.py  unsloth_qwen_lora_example.py
finetune/unsloth_qwen/: qwen2_0.5B_test.py  unsloth_qwen_lora.py  unsloth_qwen_lora_example.py
utils/: search.py  tool.json
workflow/: orchestrator.py  parallization.py  parallization_api_test.py  prompt_chain.py
