[tool.poetry]
name = "agent-lib"
version = "0.1.0"
description = ""
authors = ["cyn <chao.yn@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.65.4"
pyyaml = "^6.0.2"
ipykernel = "^6.29.5"
requests = "^2.32.3"
duckduckgo-search = "^7.5.0"
flask = "^3.1.0"
llama-index = "^0.12.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
